--- a/app/src/main/res/layout/fragment_common.xml
+++ b/app/src/main/res/layout/fragment_common.xml
@@ -14,9 +14,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:textSize="22dp"
-        android:textColor="@color/green_300"
-        android:visibility="visible"
+        android:textSize="18dp"
+        android:visibility="gone"
+        android:text="Empty list"
         tools:text="Empty list"
         tools:visibility="visible" />
 
